<resources>
    <string name="app_name">Paytm Cash Free</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_">Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="login">Login</string>
    <string name="title_activity_withdraw">Withdraw</string>
    <string name="click_to_earn">Click To Earn</string>
    <string name="_0_0_inr">0.0 INR</string>
    <string name="current_balance">Current Balance</string>
    <string name="withdraw">Withdraw</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="title_activity_admin_login">AdminLogin</string>
    <string name="title_activity_with_draw_request_list">WithDrawRequestList</string>
    <string name="admin_login">Admin Login</string>
    <string name="enter_master_password">Enter Master Password</string>
    <string name="no_withdraw_request">No withdraw Request</string>
    <string name="about_the_app">this App was created to help earn money for your paytm wallet.Watch interesting ads until you reach the withdraw limit of 100INR.For every ad you will earn 0.1 INR allowing you to earn a maxium of 2INR per day.Withdraw requests can be sent using "withdraw" and your mobile number.Withdraws are manual and will take up to 5 days.</string>
    <string name="admin">Admin</string>
    <string name="minimum_balance_to_withdraw_is_100_inr">Minimum balance to withdraw is 100 INR.</string>
    <string name="contact">Contact</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="contact_us_content">if you have question or want to report a bug ,please contact us in our email.</string>
    <string name="company_email">paytmcashfreeapp@gmail.com</string>
    <string name="paytm_number">Paytm Number</string>
</resources>
